fixed the z-index on input box in hamburger menu

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ header#header {
   left: 3rem;
   height: 5rem;
   width: 5rem;
-  opacity: 0;
+  /* opacity: 0; */
   cursor: pointer;
   z-index: 3;
   border: 1rem;
@@ -121,7 +121,7 @@ header#header {
   width: 5rem;
   padding: 1rem;
   background-color: var(--color-secondary);
-  z-index: 3;
+  z-index: 2;
 }
 /** ***************** MAIN SECTION *******************/
 
